Update ActivePlacemark.jsx logic. Now its component used for wrap marker and watch when user hover. Fixed logic for real object marker. Add transition settings to UIStore.js

--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,7 @@ body{
 
 .marker_beach{
     transform: translate(-50%, calc(-50% - 24px));
+    cursor: pointer;
 }
 
 .marker_beach .scale-marker{
